samples/_failures_safe/1761280063_49ae16_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9f5c070.c: In function ‘main’:
./samples/SAFE/__tmp_f9f5c070.c:117:5: error: expected declaration or statement at end of input
  117 |     if (max_freq_count > 1) {
      |     ^~
./samples/SAFE/__tmp_f9f5c070.c:117:5: error: expected declaration or statement at end of input
